Bug 1066664 - Fix screenshot rotation. r=mwoodrow, a=bajaj

This moves the screenshot (now-nonexistent) unrotation code from the opengl
compositor into ClientLayerManager.cpp